# bitchat.desktop

./: CMakeLists.txt  README.md  build.cmake.sh
src/: bitchat.cc  bitchat.hh  log.cc  log.hh  main.cc
